model-deepseek-coder-v3-moe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: llm-deepseek-coder-v3-moe
  namespace: llm
  labels:
    app.kubernetes.io/part-of: localllm-model
    app.kubernetes.io/name: llm-deepseek-coder-v3-moe
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: llm-deepseek-coder-v3-moe
  template:
    metadata:
      labels:
        app: llm-deepseek-coder-v3-moe
        app.kubernetes.io/part-of: localllm-model
    spec:
      containers:
      - name: vllm
        image: vllm/vllm-openai:latest
        args:
          - "--model=deepseek-ai/DeepSeek-Coder-V2-Lite-Instruct"
          - "--served-model-name=DeepSeek-Coder-V2-Lite-Instruct"
          - "--host=0.0.0.0"
          - "--port=8000"
          - "--gpu-memory-utilization=0.78"
          - "--max-model-len=2048"
          - "--max-num-seqs=2"
          - "--enable-prefix-caching"
          - "--enable-chunked-prefill"
          - "--dtype"
          - "bfloat16"
          - "--trust_remote_code"
        ports:
          - containerPort: 8000
        resources:
          limits:
            nvidia.com/gpu: 1
---
apiVersion: v1
kind: Service
metadata:
  name: llm-active
  namespace: llm
  labels:
    app.kubernetes.io/part-of: localllm-model
spec:
  selector:
    app: llm-deepseek-coder-v3-moe
  ports:
    - port: 80
      targetPort: 8000
